// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test generator cases test getMWACases 1`] = `
Array [
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageManager": "npm",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "npm",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "yarn",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageManager": "npm",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "npm",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "npm",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageManager": "npm",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageManager": "pnpm",
    "solution": "mwa",
  },
]
`;

exports[`test generator cases test getModuleCases 1`] = `
Array [
  Object {
    "language": "js",
    "packageManager": "yarn",
    "solution": "module",
  },
  Object {
    "language": "js",
    "packageManager": "npm",
    "solution": "module",
  },
  Object {
    "language": "ts",
    "packageManager": "yarn",
    "solution": "module",
  },
  Object {
    "language": "ts",
    "packageManager": "pnpm",
    "solution": "module",
  },
  Object {
    "language": "js",
    "packageManager": "pnpm",
    "solution": "module",
  },
  Object {
    "language": "ts",
    "packageManager": "npm",
    "solution": "module",
  },
]
`;

exports[`test generator cases test getModuleNewCases 1`] = `
Array [
  Object {
    "actionType": "function",
    "function": "tailwindcss",
  },
  Object {
    "actionType": "function",
    "function": "less",
  },
  Object {
    "actionType": "function",
    "function": "sass",
  },
  Object {
    "actionType": "function",
    "function": "storybook",
  },
  Object {
    "actionType": "function",
    "function": "runtimeApi",
  },
]
`;

exports[`test generator cases test getMonorepoCases 1`] = `
Array [
  Object {
    "packageManager": "pnpm",
    "solution": "monorepo",
  },
  Object {
    "packageManager": "yarn",
    "solution": "monorepo",
  },
]
`;

exports[`test generator cases test getMonorepoNewCases 1`] = `
Array [
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageName": "ts-no-selfControlRoute",
    "packagePath": "ts-no-selfControlRoute",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageName": "js-yes-conventionalRoute",
    "packagePath": "js-yes-conventionalRoute",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageName": "ts-yes-selfControlRoute",
    "packagePath": "ts-yes-selfControlRoute",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageName": "js-no-selfControlRoute",
    "packagePath": "js-no-selfControlRoute",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageName": "ts-yes-conventionalRoute",
    "packagePath": "ts-yes-conventionalRoute",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageName": "js-yes-selfControlRoute",
    "packagePath": "js-yes-selfControlRoute",
    "solution": "mwa",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "no",
    "packageName": "ts-no-selfControlRoute",
    "packagePath": "ts-no-selfControlRoute",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageName": "js-yes-conventionalRoute",
    "packagePath": "js-yes-conventionalRoute",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageName": "ts-yes-selfControlRoute",
    "packagePath": "ts-yes-selfControlRoute",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "no",
    "packageName": "js-no-selfControlRoute",
    "packagePath": "js-no-selfControlRoute",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "conventionalRoute",
    "language": "ts",
    "needModifyMWAConfig": "yes",
    "packageName": "ts-yes-conventionalRoute",
    "packagePath": "ts-yes-conventionalRoute",
    "solution": "mwa_test",
  },
  Object {
    "clientRoute": "selfControlRoute",
    "language": "js",
    "needModifyMWAConfig": "yes",
    "packageName": "js-yes-selfControlRoute",
    "packagePath": "js-yes-selfControlRoute",
    "solution": "mwa_test",
  },
  Object {
    "language": "ts",
    "packageName": "ts",
    "packagePath": "ts",
    "solution": "module",
  },
  Object {
    "language": "js",
    "packageName": "js",
    "packagePath": "js",
    "solution": "module",
  },
  Object {
    "language": "ts",
    "packageName": "ts",
    "packagePath": "ts",
    "solution": "inner_module",
  },
  Object {
    "language": "js",
    "packageName": "js",
    "packagePath": "js",
    "solution": "inner_module",
  },
]
`;
